Made three different indexes for each property category